<resources>
    <string name="app_name">Learning Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>

    <!--Teacher Login-->
    <string name="login">Login</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login_macc">If you Don"'"t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_succ">Login Successfully...</string>
    <string name="terms_and_condition">I agree to terms &amp; conditions</string>


    <string name="enter_email_address">Enter email address</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_skype_id">Enter Skype Id</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="upload_resume">Upload resume</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="register">Register</string>
    <string name="teacher_register">Teacher Registration</string>
    <string name="teacher_register_succ">Teacher Registered successfully...</string>
    <string name="forgot_password">Forget password</string>


    <!--For Parent Login-->
    <string name="parent_login">Parent Login</string>
    <string name="parent_register">Parent Registration</string>
    <!-- <string name="logout_succ">Logout Successfully..</string>
     -->


    <string name="login_mess">If you are already Register</string>
    <string name="clickHere">Click here to Login</string>
    <string name="login_now">Login Now</string>

    <!--For  Dashboard-->
    <string name="menu_my_space">My space</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_my_parent_account">My profile</string>
    <string name="menu_Blog">Blog</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_faqs">FAQ</string>
    <string name="menu_logout">Logout</string>
    <string name="logout_succ">Logout Successfully..</string>

    <string name="yes">Yes</string>
    <string name="no_internet">No internet Connection</string>
    <string name="oops_connect_your_internet">Oops! Connect Your Internet</string>
    <string name="title_activity_parent_dashboard">ParentDashboardActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No data found</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="enter_parent_name">Enter parent name</string>
    <string name="submit">Submit</string>


</resources>
