<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_space">

    <fragment
        android:id="@+id/nav_my_space"
        android:name="com.learningmanagementsystem.ui.myspace.MySpaceFragment"
        android:label="@string/menu_my_space"
        tools:layout="@layout/fragment_my_space" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.learningmanagementsystem.ui.contact_us.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_blog"
        android:name="com.learningmanagementsystem.ui.blog.BlogFragment"
        android:label="@string/menu_Blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.learningmanagementsystem.ui.about_us.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.learningmanagementsystem.ui.faq.FaqFragment"
        android:label="@string/menu_faqs"
        tools:layout="@layout/fragment_faq" />

</navigation>