<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_space_parent">

    <fragment
        android:id="@+id/nav_my_space_parent"
        android:name="com.learningmanagementsystem.parent_account.ui.my_space_parent.MySpaceParentFragment"
        android:label="@string/menu_my_space"
        tools:layout="@layout/fragment_my_space_parent" />

    <fragment
        android:id="@+id/nav_contact_us_parent"
        android:name="com.learningmanagementsystem.parent_account.ui.parent_contact_us.ContactUSParentFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_parent_contact_us" />

    <fragment
        android:id="@+id/nav_blog_parent"
        android:name="com.learningmanagementsystem.parent_account.ui.blog_parent.BlogParentFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_blog_parent" />

    <fragment
        android:id="@+id/nav_about_us_parent"
        android:name="com.learningmanagementsystem.parent_account.ui.about_us_parent.AboutUSParentFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_about_us_parent" />

    <fragment
        android:id="@+id/nav_fag_parent"
        android:name="com.learningmanagementsystem.parent_account.ui.faq_parent.FAQParentFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_faq_parent" />

    <fragment
        android:id="@+id/nav_my_account_parent"
        android:name="com.learningmanagementsystem.parent_account.ui.myaccount_parent.MyAccountParentFragment"
        android:label="@string/menu_my_parent_account"
        tools:layout="@layout/fragment_my_account_parent" />

</navigation>