<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/color_background"
    tools:context=".ui.activity.TeacherLoginActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:layout_below="@+id/header">

       <!-- <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_centerInParent="true"
            app:contentPadding="@dimen/_10sdp">
-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/custom_bg"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto"
                    android:hint="Username"
                    android:textColorHint="@color/colorGray_hint"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/colorGray_1"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/custom_bg"
                    android:fontFamily="@font/roboto"
                    android:hint="Password"
                    android:inputType="numberPassword"
                    android:paddingLeft="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColorHint="@color/colorGray_hint"
                    android:textColor="@color/colorGray_1"
                    android:textSize="@dimen/_12sdp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_50sdp"
                    android:background="@drawable/button_ripple_black"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:id="@+id/rLayoutRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtViewAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/login_macc"
                        android:textColor="@color/colorGray_1"
                        android:textSize="@dimen/_11sdp" />

                    <TextView
                        android:id="@+id/txtRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/txtViewAcc"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/register"
                        android:textColor="@color/color_blue"
                        android:textSize="@dimen/_11sdp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Forget Password"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
       <!-- </androidx.cardview.widget.CardView>-->
    </RelativeLayout>
</RelativeLayout>